# storage-collector

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  logs.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  settings.html  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
docs/: freispace-api-definition.txt
scripts/: kill-dev-port.js  release-version.js  update-deps.js
src/: app.css  bindings.ts  logs-app.svelte  main-logs.ts  main-settings.ts  settings-app.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.afdesign  icon.icns  tray.afdesign
src-tauri/migrations/: 0001_initial.sql  0002_entity_names.sql  0003_project_enabled.sql
src-tauri/src/: error.rs  events.rs  lib.rs  main.rs
src-tauri/src/api/: client.rs  types.rs
src-tauri/src/commands/: folders.rs  logs.rs  mod.rs  projects.rs  scheduler.rs  settings.rs
src-tauri/src/db/: mod.rs  models.rs  queries.rs
src-tauri/src/scheduler/: job.rs  mod.rs
src-tauri/src/tray/: icons.rs  mod.rs
src/components/general/: loadingText.svelte
src/components/logs/: LogFilter.svelte  LogList.svelte  Logs.svelte  LogsTab.svelte
src/components/settings/: ApiKeyInput.svelte  FolderPicker.svelte  GlobalSchedule.svelte  Settings.svelte  SettingsTab.svelte  StorageProjectList.svelte  StorageProjectRow.svelte
src/lib/: api.ts  utils.ts
src/lib/stores/: logs.svelte.ts  names.svelte.ts  settings.svelte.ts
